--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
+    "@vitest/coverage-v8": "^1.4.0",
+    "@vitest/ui": "^1.4.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.4.0"
   },
   "dependencies": {
     "delay": "^6.0.0"
